2001-10-04  Mike Kestner <mkestner@speakeasy.net>

	* gdk/SimpleEvent.cs : Temporarily uncomment the GCHandle code until
	a layout is ready and exceptions can be avoided.
	* gtk/Widget.cs : Killed all the signal and event attaching methods. 
	They never belonged here, and now they exist in the SimpleEvent.
	Add a Signals hash to hold refs of the Signal handlers. Killed default
	ctor and the dtor.  The event Add/Remove methods now create a 
	SimpleEvent, stuff it in the hash, and remove it when the last handler
	disappears.

2001-10-04  Mike Kestner <mkestner@speakeasy.net>

	* HACKING : Little bit of cleanup.
	* gdk/SimpleEvent.cs : Redesigned a bit. Docs.  Replaced refcounting 
	mechanism with an instance hash and added ctor/dtor.  This class
	now completely encapsulates the signal attachment and forwarding 
	mechanism for GdkEvent based signals.  It attaches to the raw signal, 
	maintains a ref to the associated event handler, and uses the static 
	callback to activate the event handler on signal receipt.
	* sample/makefile : killed one last CSC explicit reference. 

2001-10-02  Mike Kestner <mkestner@speakeasy.net>

	* glib/Value.cs : Tried adding CallingConvention.Cdecl to all the
	DllImports, but still couldn't get reliable Propery setting without
	periodic NullReference exceptions.  When all else fails, drop back 
	and punt.
	* glib/Object.cs : Rewrote Set|GetProperty methods.  Now they use
	g_object_get|set and don't rely on GValues. The int, bool, and string 
	prop types are now working reliably.
	* gtk/Window.cs : Update all Properties to use new GLib.Object
	signatures.
	* sample/HelloWorld.cs : added some more property usage for testing
	purposes.

2001-09-29  Mike Kestner <mkestner@speakeasy.net>

	* glib/Value.cs (int ctor): New constructor for int-based values.
	(int exp cast): New explicit cast operator for Val to int conversion.
	* gtk/Window.cs (DefaultHeight): New prop.
	(DefaultWidth): New prop.

2001-09-28  Mike Kestner <mkestner@speakeasy.net>
