@@ -1,5 +1,9 @@
 2001-10-04  Mike Kestner <mkestner@speakeasy.net>
 
+	* gtk/Widget.cs : Implemented all the bool, string, and int props.
+
+2001-10-04  Mike Kestner <mkestner@speakeasy.net>
+
 	* gdk/SimpleEvent.cs : Temporarily uncomment the GCHandle code until
 	a layout is ready and exceptions can be avoided.
 	* gtk/Widget.cs : Killed all the signal and event attaching methods. 
